<resources>
    <string name="app_name">FUTMarket</string>
    <string name="futmarket">FutMarket</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="login">Login</string>
    <string name="mdp">Mot de passe</string>
    <string name="connecter">Se connecter</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="_1">1</string>
    <string name="selection_mode">Selection mode</string>
    <string name="market">Market</string>
    <string name="pack">Pack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nompack">NomPack</string>
    <string name="prix">Prix</string>
    <string name="description">Description</string>
    <string name="dejaUnCmp">Vous avez deja un compte? Connectez vous</string>
    <string name="deconnection">Deconnecter</string>
    <string name="pseudo">Pseudonyme</string>
    <string name="credits">Crédits</string>
    <string name="nbCredits">NbCrédit</string>
    <string name="nomjoueur">NomJoueur</string>
    <string name="overall">Overall</string>
    <string name="ValeurPack">TextView</string>
    <string name="euro"> €</string>
    <string name="valeur">Valeur : </string>
    <string name="note">Note Général : </string>
    <string name="valeurPack">Valeur du pack : </string>
    <string name="email">Email</string>
    <string name="joueurs">Mes joueurs</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="taille">1m80</string>
    <string name="poid">80kg</string>
    <string name="acheter">Acheter</string>
    <string name="crediter">crédits ?</string>
    <string name="ValiderAchat">Valider achat pour</string>
    <string name="valider">Valider</string>
    <string name="Annuler">Annuler</string>
    <string name="mdpInvalide">Le mot de passe ne doit être pas être vide vide</string>
    <string name="emailInvalide">Le mail ne doit être pas être vide vide</string>
    <string name="ErreurMdpEmail">L\'Email ou le Mot de passe ne sont pas corrects</string>
    <string name="EmailVide">L\'email doit être non vide</string>
    <string name="MdpVide">Mdp doit être non vide</string>
    <string name="LoginVide">Le login ne doit pas être vide</string>
    <string name="deconnecte">Déconnecté</string>
    <string name="NonConnecte">Vous n\'êtes pas connecté</string>
    <string name="vendre">Vendre</string>
    <string name="ValiderVente">\"Valider vente pour \"</string>
    <string name="PasCredit">Vous n\'avez pas les crédits pour ce joueur :</string>
    <string name="achetePour">Joueur acheté pour :</string>
    <string name="venduPour">\"vendu pour : \"</string>
    <string name="creditInsuffisant">Vous n\'avez pas assez de crédit</string>
    <string name="coutPack">Vous avez acheté ce pack pour :</string>
</resources>