<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NomPack"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nompack"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/ImagePack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ultimate_pack" />

    <TextView
        android:id="@+id/PrixPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomText"
        android:text="@string/prix" />
    <TextView
        android:id="@+id/DescriptionPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomText"
        android:text="@string/description" />



</LinearLayout>